--- a/netizen.html
+++ b/netizen.html
@@ -10,15 +10,20 @@
 <h1 id="title">What Can JavaScript Do</h1>
 <p id="demo"> Welcome To first Day In Class</p>
 
-<button type="button" onclick="document.getElementById ('demo').innerHTML='Join netizen'">click</button>
+<button type="button" onclick="document.getElementById ('demo').innerHTML='Join netizen'">click</button>&nbsp;&nbsp;&nbsp;&nbsp;
 
 <button onclick="document.getElementById('title').innerHTML='lets create'"> Next</button>
 
-<div>
-    <button onclick="document.getElementById('myImage').src='bluey.jpeg'"> cars</button> 
+<div style="margin-top: 30px;">
     <img id="myImage" src="bluey.jpeg" width="200px" alt="">
-    <button onclick="document.getElementById('myImage').src='bike.jpeg'"> bikes</button>
 </div>
+<button onclick="document.getElementById('myImage').src='bluey.jpeg'"> cars</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+<button onclick="document.getElementById('myImage').src='bike.jpeg'"> bikes</button>
+<div>
+
+</div>
+
 
 </body>
 </html>
