--- a/dre.html
+++ b/dre.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <div id="box" style="width: 100px; height: 100px;"></div>
+<body style="color: gray;">
+    <div id="box" style="width: 300px; height: 150px; background-color: rgb(19, 231, 181);"></div>
+    <br>  
+    <br>
+    <button id="darkmode">Change Body</button>
 
     <script src="text.js"></script>
 </body>
