--- a/valid.html
+++ b/valid.html
@@ -6,11 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Army Recruiment</h1>
-    <br>
-    <br>
-    <h4> please input a number beetween 1 and 20</h4>
-    <br>
-    
+    <div></div>
+
+    <script>
+        let parentDiv = document.getElementsByTagName('div');
+        console.log(parentDiv);
+        let targetDiv = parentDiv[0]
+        let length = '300px';
+        let width = '200px';
+    </script>
 </body>
 </html>
