--- a/valid.html
+++ b/valid.html
@@ -14,11 +14,15 @@
 </head>
 <body>
     <div id="div"></div>
-    <button id="incr">increment</button>
-
+    <button id="incr">increment</button> 
+    <button id="dcr">decrement</button>
+    <button id="reset">reset</button>
+  
     <script>
-        let count = 0;
+        let count= 0;
         let incrementButton = document.getElementById("incr");
+        let decrementButton = document.getElementById("dcr");
+        let resetButton = document.getElementById("reset");
     let div = document.getElementById('div');
     div.style.width = '300px';
     div.style.height = '300px';
@@ -32,13 +36,25 @@
     div.style.border = '10px solid green';
     div.style.cursor = 'pointer';
 
+
     const incrementCount= () => {
         count++;
-        box.textContent = count;
+        div.textContent = count;
     }
 
     incrementButton.addEventListener('click', incrementCount);
-    
+
+    const decrementCount= () =>{
+        count--;
+        div.textContent = count;
+    }
+    decrementButton.addEventListener('click',decrementCount);
+
+    const reset= () =>{
+        let count= 0;
+        div.textContent = count; 
+    }
+    resetButton.addEventListener('click',reset);                                      
 
 
     </script>
