--- a/click.html
+++ b/click.html
@@ -4,31 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        section{
+            width: 80vw;
+            height: 80vh;
+            background-color: beige;
+            border: black 2px solid;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <script>
-             let count= 0;
-        let incrementButton = document.getElementById("incr");
-        let decrementButton = document.getElementById("dcr");
-        let resetButton = document.getElementById("reset");
-    let div = document.getElementById('div');
-    div.style.width = '300px';
-    div.style.height = '300px';
-    div.style.backgroundColor = 'gray';
-    div.textContent = '0';
-    div.style.display = 'flex';
-    div.style.justifyContent = 'center';
-    div.style.alignItems = 'center';
-    div.style.borderRadius = '50%';
-    div.style.border = '10px solid green';
-    div.style.cursor = 'pointer';
-
-
-        </script>
-
-
-    </div>
-    
+<section>
+    <div class="box"></div>
+    <div class="box"></div>
+</section>
 </body>
 </html>
