--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <section>
+    <div class="box" id="faq">
+    <div class="box" id="faq">
+    </section>
+    </div>
     
 </body>
 </html>
