--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <section>
-    <div class="box" id="faq">
-    <div class="box" id="faq">
+    <div class="box"></div>
+    <div class="box"></div>
     </section>
-    </div>
     
 </body>
 </html>
