--- a/click.html
+++ b/click.html
@@ -4,19 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        section{
-            width: 80vw;
-            height: 80vh;
-            background-color: beige;
-            border: black 2px solid;
-        }
-    </style>
 </head>
 <body>
-<section>
-    <div class="box"></div>
-    <div class="box"></div>
-</section>
+    <h1> sdfilszhdifasiuldf;oiAShfoi</h1>
+    <p> budsfnishjdiufhakldfhkwenfu</p>
+    
 </body>
 </html>
