--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        section{
+            width: 80vw;
+            height: 80vh;
+            background-color: black;
+            display: flex;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-    <section>
-    <div class="box"></div>
-    <div class="box"></div>
-    </section>
+    <div class="div">
+    </div>
+    <script>
+  
+    </script>
     
 </body>
 </html>
