--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        section{
-            width: 80vw;
-            height: 80vh;
-            background-color: black;
-            display: flex;
-            justify-content: center;
+       *{
+        margin: 0;
+        padding: 0;
+        }
+        .gray_div{
+            height: 100vh;
+            width: 100vw;
+            background-color:#C5E4E7
         }
     </style>
 </head>
 <body>
-    <div class="div">
-    </div>
-    <script>
-  
-    </script>
+    <section>
+        <div class="gray_div"></div>
+        <div class="white_div"></div>
+        <div class="green_div"></div>
+
+    </section>
     
 </body>
 </html>
