--- a/dre.html
+++ b/dre.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="color: gray;">
-    <div id="box" style="width: 300px; height: 150px; background-color: rgb(19, 231, 181);"></div>
-    <br>  
-    <br>
-    <button id="darkmode">Change Body</button>
-
-    <script src="text.js"></script>
+<body>
+    <script>
+        scores[1,2,3,4,5,6,7,8]; 
+    </script>
 </body>
 </html>
