--- a/dre.html
+++ b/dre.html
@@ -6,8 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>scores</h1>
     <script>
-        scores[1,2,3,4,5,6,7,8]; 
+       const sum =[
+        {subject: "maths",score:84},
+        {subject: "chemistry",score:92},
+        {subject: "english",score:80},
+        {subject: "physics",score:70},
+       ]
+       //7const totalSum = sum.reduce((accumulator,))
     </script>
 </body>
 </html>
