--- a/dre.html
+++ b/dre.html
@@ -3,9 +3,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Book Haven</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #f9f9f9;
+            color: #333;
+        }
+
+        header {
+            background: #2c3e50;
+            color: white;
+            padding: 1.5rem;
+            text-align: center;
+            font-size: 2rem;
+            animation: slideDown 1s ease-out;
+        }
+
+        @keyframes slideDown {
+            from { transform: translateY(-100%); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+
+        .container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            padding: 2rem;
+        }
+
+        .book {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .book:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+        }
+
+        .book img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+        }
+
+        .book-details {
+            padding: 1rem;
+        }
+
+        .book-title {
+            font-size: 1.25rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .book-author {
+            font-size: 1rem;
+            color: #555;
+            margin-bottom: 1rem;
+        }
+
+        .book-price {
+            font-size: 1.1rem;
+            margin-bottom: 1rem;
+            color: #27ae60;
+        }
+
+        .book-buttons {
+            display: flex;
+            justify-content: space-between;
+            gap: 0.5rem;
+        }
+
+        .book-buttons button {
+            flex: 1;
+            padding: 0.5rem;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background 0.3s;
+        }
+
+        .select-btn {
+            background: #3498db;
+            color: white;
+        }
+
+        .select-btn:hover {
+            background: #2980b9;
+        }
+
+        .check-btn {
+            background: #2ecc71;
+            color: white;
+        }
+
+        .check-btn:hover {
+            background: #27ae60;
+        }
+    </style>
 </head>
 <body>
-  
+    <header>
+        📚 Welcome to Book Haven
+    </header>
+
+    <div class="container">
+        <div class="book">
+            <img src="https://via.placeholder.com/250x300.png?text=Book+1" alt="Book 1">
+            <div class="book-details">
+                <div class="book-title">The Winds of Time</div>
+                <div class="book-author">by Sarah Miles</div>
+                <div class="book-price">$19.99</div>
+                <div class="book-buttons">
+                    <button class="select-btn">Select</button>
+                    <button class="check-btn">Check</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="book">
+            <img src="https://via.placeholder.com/250x300.png?text=Book+2" alt="Book 2">
+            <div class="book-details">
+                <div class="book-title">Mysteries of the Mind</div>
+                <div class="book-author">by Alan Brook</div>
+                <div class="book-price">$14.50</div>
+                <div class="book-buttons">
+                    <button class="select-btn">Select</button>
+                    <button class="check-btn">Check</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="book">
+            <img src="https://via.placeholder.com/250x300.png?text=Book+3" alt="Book 3">
+            <div class="book-details">
+                <div class="book-title">Adventures in Coding</div>
+                <div class="book-author">by Maria Lin</div>
+                <div class="book-price">$25.00</div>
+                <div class="book-buttons">
+                    <button class="select-btn">Select</button>
+                    <button class="check-btn">Check</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Add more books similarly -->
+    </div>
 </body>
 </html>
