--- a/dre.html
+++ b/dre.html
@@ -110,7 +110,7 @@
 </head>
 <body>
     <header>
-        📚 Welcome to Book Haven
+        📚 WELCOME TO EVERY BIG STEP BOOK STORES
     </header>
 
     <div class="container">
@@ -153,7 +153,22 @@
             </div>
         </div>
 
+        <div class="book">
+          <img src="https://via.placeholder.com/250x300.png?text=Book+2" alt="Book 2">
+          <div class="book-details">
+              <div class="book-title">Every big step</div>
+              <div class="book-author">by Alan Brook</div>
+              <div class="book-price">$10.50</div>
+              <div class="book-buttons">
+                  <button class="select-btn">Select</button>
+                  <button class="check-btn">Check</button>
+              </div>
+          </div>
+      </div>
+
+
         <!-- Add more books similarly -->
     </div>
+
 </body>
 </html>
